# KohakuTerrarium

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  README.zh.md  ROADMAP.md  pyproject.toml
.github/workflows/: android.yml  ci.yml  nightly.yml  release.yml
agents/conversational/: config.yaml
agents/conversational/custom/: input.py  output.py
agents/discord_bot/: config.yaml
agents/discord_bot/custom/: discord_input.py  discord_io.py  discord_output.py  discord_trigger.py
agents/discord_bot/memory/: character.md  context.md  facts.md  group_style.md
agents/discord_bot/prompts/: system.md
agents/novel_terrarium/: terrarium.yaml
agents/planner_agent/: config.yaml
agents/planner_agent/prompts/: plan_extra.md  system.md
apps/api/: app.py
apps/api/routes/: sessions.py  terrariums.py
creatures/root/prompts/: system.md
docker/: Dockerfile.all  Dockerfile.client  Dockerfile.host  kt-aio-entrypoint.sh  kt-client-entrypoint.sh
docs/: docs.config.js  in-function-import-analysis.md
docs/api-reference/: python.md
docs/architecture/: framework.md  serving.md  terrarium-runtime.md
docs/concepts/: agents.md  prompts.md
docs/concepts/modules/: tool.md  trigger.md
docs/dev/: internals.md
docs/develop/: testing.md
docs/en/concepts/: README.md  glossary.md  laboratory.md  studio.md
docs/en/dev/: README.md  dependency-graph.md  internals.md  testing.md
docs/en/guides/: README.md  app-update.md  getting-started.md  laboratory.md  serving.md  sessions.md
docs/en/reference/: cli.md
docs/en/tutorials/: first-creature.md
docs/guides/: custom-modules.md
docs/reference/: builtins.md
docs/terrarium/: api.md  architecture.md
docs/zh-CN/: README.md
docs/zh-CN/concepts/: README.md  boundaries.md  glossary.md  laboratory.md  patterns.md  studio.md
docs/zh-CN/dev/: README.md  dependency-graph.md  frontend.md  internals.md  testing.md
docs/zh-CN/guides/: README.md  app-update.md  composition.md  configuration.md  creatures.md  custom-modules.md  examples.md  frontend-layout.md  getting-started.md  laboratory.md  mcp.md  memory.md  packages.md  plugins.md  programmatic-usage.md  serving.md  sessions.md  terrariums.md
docs/zh-CN/reference/: README.md  builtins.md  cli.md  configuration.md  http.md  plugin-hooks.md  python.md
docs/zh-CN/tutorials/: README.md  first-creature.md  first-custom-tool.md  first-plugin.md  first-python-embedding.md  first-terrarium.md
docs/zh-TW/concepts/: README.md  glossary.md  laboratory.md  studio.md
docs/zh-TW/dev/: README.md  internals.md  testing.md
docs/zh-TW/guides/: README.md  app-update.md  getting-started.md  laboratory.md  serving.md  sessions.md
docs/zh-TW/reference/: cli.md
docs/zh-TW/tutorials/: first-creature.md
examples/agent-apps/swe_agent_tui/: config.yaml
examples/deployment/: README.md  compose-all.yml  compose-distributed-client.yml  compose-distributed-host.yml  compose-host-clients.yml  nginx-host.conf
examples/terrariums/swe_team_managed_tui/: terrarium.yaml
packaging/android/: postcreate.py
scripts/: _coverage_audit.py  _pkg_breakdown.py  build_release_tree.py  dep_graph_allowlist.json  prep_local_briefcase.py  publish_manifest.py  set_pyproject_version.py  verify_bundled_wheels.py
src/kohakuterrarium/: __briefcase__.py  __init__.py  app_icon.icns  registry.json
src/kohakuterrarium-frontend/: index.html  package-lock.json  package.json  vitest.config.js
src/kohakuterrarium-frontend/src/: App.vue  main.js  style.css
src/kohakuterrarium/api/: _io_executor.py  app.py  deps.py  events.py  schemas.py
src/kohakuterrarium/bootstrap/: README.md  agent_init.py  plugins.py  tools.py  triggers.py
src/kohakuterrarium/builtin_skills/: README.md  __init__.py
src/kohakuterrarium/builtins/: README.md  tool_catalog.py
src/kohakuterrarium/cli/: __init__.py  memory.py  self_update.py
src/kohakuterrarium/commands/: README.md
src/kohakuterrarium/compose/: __init__.py  agent.py  core.py  effects.py
src/kohakuterrarium/core/: README.md  __init__.py  agent.py  agent_handlers.py  agent_init.py  agent_messages.py  agent_tools.py  budget.py  compact.py  config.py  config_types.py  controller.py  conversation.py  events.py  executor.py
src/kohakuterrarium/launcher/: __init__.py  __main__.py  _lock.py  bootloader.py  downloader.py  feeds.py  log.py  migration.py  paths.py  settings.py  sources.py  splash.html  splash_server.py  splash_window.py  tree_ops.py  update_runner.py  venv_ops.py
src/kohakuterrarium/llm/: README.md  __init__.py  base.py  codex_auth.py  codex_provider.py  message.py  openai.py  presets.py  tools.py  (+1 more)
terrariums/swe_team/: terrarium.yaml
tests/: README.md  conftest.py
tests/e2e/: test_api_creature.py  test_api_settings.py  test_multinode_deep_probes.py  test_multinode_journey.py  test_prog_terrarium.py
tests/integration/: test_api.py  test_bootstrap.py  test_hotplug.py  test_launcher.py  test_modules.py  test_prompt.py  test_service_api.py  test_studio.py  test_terrarium.py  test_tool_format_integration.py
tests/manual/: bundled-build-checklist.md
tests/unit/: test_api_readonly_endpoints.py  test_bootstrap.py  test_branch_command.py  test_compact.py  test_compose.py  test_compose_agent.py  test_controller_image_persistence.py  test_conversation_image_parts.py  test_cron_trigger.py  test_file_sizes.py  test_hot_plug_attach.py  test_hotplug_transition_event.py  test_iteration_budget.py  test_memory.py  test_migration_compacted_session.py  test_migration_failure_rollback.py  test_migration_idempotent.py  test_migration_v1_to_v2_roundtrip.py  test_modified_files_coverage.py  test_native_tools.py  test_no_real_config_pollution.py  test_plugin_system.py  test_regen_event_log.py  test_regen_no_duplicate_user.py  test_run_cli.py  test_session_artifacts.py  test_session_artifacts_endpoint.py  test_session_resume_hotplugged_agent.py  test_sessions_path_resolution.py  test_skill_manage_tool.py  test_skill_nudge_trigger.py  test_terrarium_cli.py  test_tool_format.py  test_tool_guards.py  test_trigger_manager.py  test_triggers_and_manual.py
(+469 files in other folders)
